--- a/Test1/pom.xml
+++ b/Test1/pom.xml
@@ -20,6 +20,14 @@
     <version>2.11.0</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-java</artifactId>
+    <version>7.11.0</version>
+</dependency>
+
+
 
 
   </dependencies>
